// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render 1`] = `
<DocumentFragment>
  <textarea
    class="w-full px-4 py-3 overflow-hidden border rounded appearance-none sc-AxjAm bcybyt shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="TextArea"
    style="height: 4px;"
  />
</DocumentFragment>
`;

exports[`TextArea should render as disabled 1`] = `
<DocumentFragment>
  <textarea
    class="w-full px-4 py-3 overflow-hidden border rounded appearance-none sc-AxjAm bcybyt shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="TextArea"
    disabled=""
  />
</DocumentFragment>
`;

exports[`TextArea should render as invalid 1`] = `
<DocumentFragment>
  <textarea
    aria-invalid="true"
    class="w-full px-4 py-3 overflow-hidden border rounded appearance-none sc-AxjAm bcybyt shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary "
    data-testid="TextArea"
  />
</DocumentFragment>
`;
